Updated styles corrected layout issue

--- a/src/app/details/details.component.css
+++ b/src/app/details/details.component.css
@@ -211,4 +211,9 @@ button:hover {
     .friends-container {
         display: block;
     }
+
+    .nav-container {
+        width: 350px;
+        right: 10px;
+    }
 }
