--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -6,7 +6,7 @@ section {
 
 .links {
     text-align: left;
-    width: 100%;
+    max-width: 450px;
     margin-bottom: 20px;
 }
 
@@ -98,7 +98,7 @@ hr {
     margin-right: 10px;
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 1024px) {
     .small {
         display: none;
     }
